assets-deploy.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: assets
  namespace: bibliothek
  labels:
    app: assets
    role: frontend
    scs: assets
spec:
  ports:
  - port: 8080
    name: web
  selector:
    app: assets

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: assets
  namespace: bibliothek
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: assets
        role: frontend
        scs: assets
    spec:
      containers:
      - name: varnish-ssi
        image: quay.io/containerbootcamp/alpine-varnish
        volumeMounts:
        - name: varnish-config-volume
          mountPath: /etc/varnish/
      - name: nginx
        image: nginx:alpine
        livenessProbe:
          exec:
            command: [ "kill", "-HUP", "1"]
          initialDelaySeconds: 60
          periodSeconds: 60
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: conf
          mountPath: /etc/nginx/conf.d
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: varnish-config-volume
        configMap:
          name: varnish-for-assets
      - name: conf
        secret:
          secretName: assets-nginx-conf
      - name: html
        persistentVolumeClaim:
          claimName: assets

---

#####
# ingress to assets, test f.e. with
# curl http://bootcamp.ch.innoq.io/assets/
#####

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
  name: assets
  namespace: bibliothek
spec:
  rules:
  - host: bootcamp.ch.innoq.io
    http:
      paths:
      - path: /
        backend:
          serviceName: assets
          servicePort: 8080
